--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 <li><a href="qooxdoo/application/demobrowser/build/">Qooxdoo demoBrowser</li>
 <li><a href="qooxdoo/framework/api/">Qooxdoo doc</li>
 <li><a href="qooxdoo/application/playground/build/">Qooxdoo playground</li>
-<li><a href="mongoose/docs/index.html">Mongoose docs</li>
+<li><a href="docs/index.html">Mongoose docs</li>
 </ul>
 </body>
 </html>
